gave alerts high z-index to ensure on top

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -132,6 +132,7 @@ input, textarea, select, .uneditable-input {
   left: 0;
   top: 100px;
   width: 100%;
+  z-index: 999;
 }
 
 /* ============================================
